k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
  namespace: session-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router
          image: 766330623591.dkr.ecr.ap-northeast-1.amazonaws.com/router:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz       
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: session-system
spec:
  selector:
    app: router
  ports:
    - port: 80         # OK
      targetPort: 8080 # OK
      protocol: TCP
  type: ClusterIP
